8287223: C1: Inlining attempt through MH::invokeBasic() with null receiver